Update app name in manifest.json

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "VEC_Portal",
-  "name": "Create React App Sample",
+  "name": "VEC teams Portal",
   "icons": [
     {
       "src": "favicon.ico",
